src/test/ui/error-codes/E0302.stderr
error[E0302]: cannot assign in a pattern guard
  --> $DIR/E0302.rs:14:21
   |
LL |         option if { option = None; false } => { }, //~ ERROR E0302
   |                     ^^^^^^^^^^^^^ assignment in pattern guard

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0302"
